Fix buttons alignment

--- a/frontend/nft-master/src/features/nfts/components/nft/NFT.module.scss
+++ b/frontend/nft-master/src/features/nfts/components/nft/NFT.module.scss
@@ -182,6 +182,12 @@
   }
 }
 
+.buttons {
+  @include gap(24px, right);
+  display: flex;
+  align-items: center;
+}
+
 .backButton {
   @include gap(11px, right);
   display: flex;
@@ -213,8 +219,6 @@
   border: 2px solid #000000;
   border-radius: 2px;
   transition: all 0.3s;
-  align-self: flex-start;
-  margin-left: 20px;
 
   &:hover {
     opacity: 0.5;
